--- a/sass/modules/service-card/_service-card.scss
+++ b/sass/modules/service-card/_service-card.scss
@@ -187,3 +187,9 @@
         }
     }
 }
+
+// Theme Responsive
+.service-area-wrapper{
+    z-index: unset;
+    
+}
