--- a/sass/modules/slider/_slider-style-one.scss
+++ b/sass/modules/slider/_slider-style-one.scss
@@ -412,7 +412,7 @@
       }
       @include rmaxwd(1799) {
         width: auto;
-        margin-top: inherit;
+        // margin-top: inherit;
       }
     }
   }
